Change resource of deployments

--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -14,10 +14,7 @@ spec:
       containers:
       - name: api
         image: guisilveira/pedelogo-catalogo
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        resources: {}
         ports:
         - containerPort: 80
         env:
