--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -28,7 +28,7 @@ spec:
           - name: Mongo__User
             value: mongouser
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: api-service
