--- a/k8s/mongo.yaml
+++ b/k8s/mongo.yaml
@@ -23,7 +23,7 @@ spec:
           - name: MONGO_INITDB_ROOT_PASSWORD
             value: mongopwd
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service
