--- a/k8s/mongo.yaml
+++ b/k8s/mongo.yaml
@@ -22,15 +22,15 @@ spec:
             value: mongouser
           - name: MONGO_INITDB_ROOT_PASSWORD
             value: mongopwd
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongo-service
-spec:
-  selector:
-    app: mongodb
-  ports:
-  - port: 27017
-    targetPort: 27017
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: mongo-service
+#spec:
+#  selector:
+#    app: mongodb
+#  ports:
+#  - port: 27017
+#    targetPort: 27017
 
